--- a/itworks/templates/base.html
+++ b/itworks/templates/base.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>Title</title>
 </head>
 <body>
-ejkwklfejkljfkler
+    <h1>Test Template Page</h1>
+    {% block main %}
+
+    {% endblock %}
+
+    {% block test %}
+    {% endblock %}
 </body>
 </html>
