--- a/itworks/books/templates/books/edit.html
+++ b/itworks/books/templates/books/edit.html
@@ -4,8 +4,8 @@
   <h1>Edit Book </h1>
 <form method="post" action="" >
   {% csrf_token %}
-  {{form}}
-  {{form.title}} {{book.title}}
+  {{form.as_p}}
+<!--  {{form.title}} {{book.title}}-->
 <!--  <div class="mb-3">-->
 <!--    <label  class="form-label">Title</label>-->
 <!--    <input type="text" class="form-control"-->
