--- a/itworks/books/templates/books/view.html
+++ b/itworks/books/templates/books/view.html
@@ -19,6 +19,7 @@
         <tr> <th>ID</th> <td>{{book.author.id}}</td></tr>
     </table>
  <h1> Author Also wrote</h1>
+    {{book}}
 <!--    {{book.author.book_set.all}}-->
     <ul>
         <!--    {% for authbook in book.author.book_set.all   %}-->
